--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.1 #####
+##### Nginx Caching Reverse Proxy v2.2 #####
 
 user nginx;
 worker_processes auto;
@@ -58,19 +58,79 @@ http {
                 "~^bytes .*/([0-9]*)$" $1;
         }
 
-        # WSUS static upstream mapping
+        # Default caching server configuration
 
-        upstream wsus.tsv.catholic.edu.au {
-                server 10.112.8.30:8530;
-                #server 113.29.212.33:8530;
+        server {
+                # Listen on port 80 and ignore_invalid_headers
+                listen 80;
+                                                                                            [ Wrote 103 lines ]
+
+[root@c10-wuc ~]# cat /etc/nginx/nginx.conf  
+##### Nginx Caching Reverse Proxy v2.2 #####
+
+user nginx;
+worker_processes auto;
+worker_rlimit_nofile 65535;
+
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+
+events {
+        worker_connections 32000;
+}
+
+stream {
+        # Set resolvers against DNS servers not used for local interception
+        resolver 10.112.4.11 10.112.4.12 ipv6=off;
+
+        # Pass through SSL connections upstream
+        server {
+                listen 443;
+                proxy_buffer_size 16k;
+                ssl_preread on;
+                proxy_pass "${ssl_preread_server_name}:443";
+        }
+        # Logging for SSL/SNI connections
+        log_format ssl '[SSL] $remote_addr [$time_local] $protocol $status "$ssl_preread_server_name"';
+        access_log /var/log/nginx/access.log ssl buffer=512;
+}
+
+http {
+        include /etc/nginx/mime.types;
+        default_type application/octet-stream;
+
+        # Logging for HTTP transactions
+        log_format main '[HTTP] $remote_addr [$time_local] $status $request_method "$host$uri" "$filesize" "$http_user_agent" "$upstream_cache_status"';
+        access_log /var/log/nginx/access.log main buffer=512;
+
+        # Set resolvers against DNS servers not used for local interception
+        resolver 10.112.4.11 10.112.4.12 ipv6=off;
+
+        # Global cache paths and variables
+        proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=cache:10m max_size=80g inactive=7d use_temp_path=off;
+
+        # Miscellaneous tweaks
+        sendfile on;
+        tcp_nopush on;
+        keepalive_timeout 60;
+        keepalive_requests 512;
+        client_max_body_size 20G;
+        client_body_buffer_size 16M;
+        server_names_hash_max_size 1024;
+
+        # Map to get file size from content range header
+
+        map $upstream_http_content_range $filesize {
+                default -;
+                "~^bytes .*/([0-9]*)$" $1;
         }
 
         # Default caching server configuration
 
         server {
-                # Listen on port 80 and 8530 (WSUS) and turn off ignore invalid headers
+                # Listen on port 80 and ignore_invalid_headers
                 listen 80;
-                listen 8530;
                 ignore_invalid_headers off;
 
                 proxy_cache cache;
