--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.2 #####
+##### Nginx Caching Reverse Proxy v2.3_amplify #####
 
 user nginx;
 worker_processes auto;
@@ -23,18 +23,23 @@ stream {
                 ssl_preread on;
                 proxy_pass "${ssl_preread_server_name}:443";
         }
-        # Logging for SSL/SNI connections
-        log_format ssl '[SSL] $remote_addr [$time_local] $protocol $status "$ssl_preread_server_name"';
-        access_log /var/log/nginx/access.log ssl buffer=512;
 }
 
 http {
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
 
-        # Logging for HTTP transactions
-        log_format main '[HTTP] $remote_addr [$time_local] $status $request_method "$host$uri" "$filesize" "$http_user_agent" "$upstream_cache_status"';
-        access_log /var/log/nginx/access.log main buffer=512;
+        # Extended logging for Nginx Amplify
+        log_format  main_ext    '$remote_addr - $remote_user [$time_local] "$request" '
+                                '$status $body_bytes_sent "$http_referer" '
+                                '"$http_user_agent" "$http_x_forwarded_for" '
+                                '"$host" sn="$server_name" '
+                                'rt=$request_time '
+                                'ua="$upstream_addr" us="$upstream_status" '
+                                'ut="$upstream_response_time" ul="$upstream_response_length" '
+                                'cs=$upstream_cache_status' ;
+
+        access_log /var/log/nginx/access.log main_ext;
 
         # Set resolvers against DNS servers not used for local interception
         resolver 10.112.4.11 10.112.4.12 ipv6=off;
@@ -66,7 +71,7 @@ http {
                 ignore_invalid_headers off;
 
                 proxy_cache cache;
-                proxy_cache_valid 200 206 14d;
+                proxy_cache_valid 200 206 30d;
 
                 #Only cache GET request methods
                 proxy_cache_methods GET;
@@ -98,6 +103,16 @@ http {
                         proxy_set_header Upgrade-Insecure-Requests "";
                         proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
                         proxy_hide_header ETag;
+                }
+        }
+        server {
+                # Add stub status for Nginx Amplify
+                listen 127.0.0.1:80;
+                server_name 127.0.0.1;
+                location /nginx_status {
+                        stub_status on;
+                        allow 127.0.0.1;
+                        deny all;
                 }
         }
 }
