--- a/etc/named.conf
+++ b/etc/named.conf
@@ -1,7 +1,8 @@
 options {
         listen-on { any; };
         directory       "/var/named";
-
+		
+		filter-aaaa-on-v4 yes;
         allow-query { any; };
         recursion yes;
 
