--- a/etc/named.conf
+++ b/etc/named.conf
@@ -39,17 +39,7 @@ zone "officecdn.microsoft.com.edgesuite.net." IN {
         file "/etc/named/intercept.zone";
 };
 
-zone "appldnld.apple.com." IN {
-        type master;
-        file "/etc/named/intercept.zone";
-};
-
-zone "iosapps.itunes.apple.com." IN {              
-        type master;
-        file "/etc/named/intercept.zone";    
-};
-
-zone "osxapps.itunes.apple.com." IN { 
+zone "aaplimg.com." IN {
         type master;
         file "/etc/named/intercept.zone";
 };
