--- a/etc/named.conf
+++ b/etc/named.conf
@@ -19,11 +19,6 @@ zone "download.windowsupdate.com." IN {
         file "/etc/named/intercept.zone";
 };
 
-zone "windowsupdate.microsoft.com." IN {
-        type master;
-        file "/etc/named/intercept.zone";
-};
-
 zone "tlu.dl.delivery.mp.microsoft.com." IN {
         type master;
         file "/etc/named/intercept.zone";
@@ -39,7 +34,22 @@ zone "officecdn.microsoft.com.edgesuite.net." IN {
         file "/etc/named/intercept.zone";
 };
 
-zone "aaplimg.com." IN {
+zone "appldnld.apple.com." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
+
+zone "iosapps.itunes.apple.com." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
+
+zone "updates-http.cdn-apple.com." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
+
+zone "osxapps.itunes.apple.com." IN {
         type master;
         file "/etc/named/intercept.zone";
 };
