--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.3_amplify #####
+##### Nginx Caching Reverse Proxy v2.4_amplify #####
 
 user nginx;
 worker_processes auto;
@@ -45,7 +45,7 @@ http {
         resolver 10.112.4.11 10.112.4.12 ipv6=off;
 
         # Global cache paths and variables
-        proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=cache:10m max_size=80g inactive=7d use_temp_path=off;
+        proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=cache:10m max_size=80g inactive=14d use_temp_path=off;
 
         # Miscellaneous tweaks
         sendfile on;
@@ -56,18 +56,28 @@ http {
         client_body_buffer_size 16M;
         server_names_hash_max_size 1024;
 
-        # Map to get file size from content range header
+        server {
+                # Don't cache these zones
+                listen 80 default_server;
 
-        map $upstream_http_content_range $filesize {
-                default -;
-                "~^bytes .*/([0-9]*)$" $1;
+                server_name     redirector.gvt1.com;
+
+                location / {
+                        proxy_http_version 1.1;
+                        proxy_pass http://${host};
+                        proxy_pass_request_headers on;
+                        proxy_set_header Host $host;
+                }
         }
 
-        # Default caching server configuration
-
         server {
-                # Listen on port 80 and ignore_invalid_headers
+                # Aggressive caching for clustered nodes (eg. same files exist on 1/2/3/4/5/6/7.tlu.dl.delivery.mp.microsoft.com)
                 listen 80;
+
+                server_name     tlu.dl.delivery.mp.microsoft.com *.tlu.dl.delivery.mp.microsoft.com
+                                download.windowsupdate.com *.download.windowsupdate.com
+                                *.gvt1.com;
+
                 ignore_invalid_headers off;
 
                 proxy_cache cache;
@@ -89,9 +99,6 @@ http {
                 # Aggressive caching
                 proxy_cache_key "$request_method|$uri|$slice_range";
 
-                # Standard caching
-                # proxy_cache_key "$request_method|$host$uri|$slice_range";
-
                 proxy_cache_use_stale updating;
 
                 location / {
@@ -105,6 +112,51 @@ http {
                         proxy_hide_header ETag;
                 }
         }
+
+        server {
+                # Default caching
+                listen 80;
+
+                server_name     appldnld.apple.com iosapps.itunes.apple.com osxapps.itunes.apple.com updates-http.cdn-apple.com
+                                officecdn.microsoft.com officecdn.microsoft.com.edgesuite.net
+                                dl.google.com
+                                ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com;
+
+                ignore_invalid_headers off;
+
+                proxy_cache cache;
+                proxy_cache_valid 200 206 30d;
+
+                #Only cache GET request methods
+                proxy_cache_methods GET;
+
+                # Slice downloads into 16MB pieces
+                slice 16M;
+
+                # Lock cache objects until the 16MB piece is retrieved
+                proxy_cache_lock on;
+
+                # Wait 600 seconds before sending file to client
+                proxy_cache_lock_timeout 600s;
+                proxy_cache_lock_age 600s;
+
+                # Standard caching  
+                proxy_cache_key "$request_method|$host$uri|$slice_range";
+
+                proxy_cache_use_stale updating;
+
+                location / { 
+                        proxy_http_version 1.1;
+                        proxy_pass http://${host};
+                        proxy_pass_request_headers on;
+                        proxy_set_header Host $host;
+                        proxy_set_header Range $slice_range;
+                        proxy_set_header Upgrade-Insecure-Requests "";
+                        proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
+                        proxy_hide_header ETag;
+                }
+        }
+
         server {
                 # Add stub status for Nginx Amplify
                 listen 127.0.0.1:80;
