--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.4_amplify #####
+##### Nginx Caching Reverse Proxy v2.5_amplify #####
 
 user nginx;
 worker_processes auto;
@@ -60,7 +60,7 @@ http {
                 # Don't cache these zones
                 listen 80 default_server;
 
-                server_name     redirector.gvt1.com;
+                server_name     redirector.gvt1.com officecdn.microsoft.com;
 
                 location / {
                         proxy_http_version 1.1;
@@ -118,7 +118,7 @@ http {
                 listen 80;
 
                 server_name     appldnld.apple.com iosapps.itunes.apple.com osxapps.itunes.apple.com updates-http.cdn-apple.com
-                                officecdn.microsoft.com officecdn.microsoft.com.edgesuite.net
+                                officecdn.microsoft.com.edgesuite.net
                                 dl.google.com
                                 ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com;
 
