--- a/etc/sysctl.conf
+++ b/etc/sysctl.conf
@@ -16,15 +16,8 @@ net.ipv4.ip_local_port_range = 1024 65000
 sys.fs.file_max = 100000
 fs.file-max = 100000
 
-
 # Ipv6
-net.ipv6.conf.default.router_solicitations = 0
-net.ipv6.conf.default.accept_ra_rtr_pref = 0
-net.ipv6.conf.default.accept_ra_pinfo = 0
-net.ipv6.conf.default.accept_ra_defrtr = 0
-net.ipv6.conf.default.autoconf = 0
-net.ipv6.conf.default.dad_transmits = 0
-net.ipv6.conf.default.max_addresses = 1
+net.ipv6.conf.all.disable_ipv6 = 1
 
 
 
