--- a/etc/named.conf
+++ b/etc/named.conf
@@ -29,6 +29,11 @@ zone "officecdn.microsoft.com.edgesuite.net." IN {
         file "/etc/named/intercept.zone";
 };
 
+zone "officecdn.microsoft.com." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
+
 zone "appldnld.apple.com." IN {
         type master;
         file "/etc/named/intercept.zone";
