--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.5_amplify #####
+##### Nginx Caching Reverse Proxy v2.6 #####
 
 user nginx;
 worker_processes auto;
@@ -60,7 +60,7 @@ http {
                 # Don't cache these zones
                 listen 80 default_server;
 
-                server_name     redirector.gvt1.com officecdn.microsoft.com;
+                server_name     redirector.gvt1.com;
 
                 location / {
                         proxy_http_version 1.1;
@@ -69,6 +69,14 @@ http {
                         proxy_set_header Host $host;
                 }
         }
+
+        server {
+                # Redirect officecdn.microsoft.com to officecdn.microsoft.com.edgesuite.net
+                listen 80;
+                server_name     officecdn.microsoft.com;
+                return 301 http://officecdn.microsoft.com.edgesuite.net$request_uri;
+        }
+
 
         server {
                 # Aggressive caching for clustered nodes (eg. same files exist on 1/2/3/4/5/6/7.tlu.dl.delivery.mp.microsoft.com)
