--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.6 #####
+##### Nginx Caching Reverse Proxy v2.7 #####
 
 user nginx;
 worker_processes auto;
@@ -125,7 +125,7 @@ http {
                 # Default caching
                 listen 80;
 
-                server_name     appldnld.apple.com iosapps.itunes.apple.com osxapps.itunes.apple.com updates-http.cdn-apple.com
+                server_name     appldnld.apple.com iosapps.itunes.apple.com osxapps.itunes.apple.com updates-http.cdn-apple.com swcdn.apple.com
                                 officecdn.microsoft.com.edgesuite.net
                                 dl.google.com
                                 ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com;
