--- a/etc/named.conf
+++ b/etc/named.conf
@@ -54,6 +54,11 @@ zone "osxapps.itunes.apple.com." IN {
         file "/etc/named/intercept.zone";
 };
 
+zone "swcdn.apple.com." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
+
 zone "dl.google.com." IN {
         type master;
         file "/etc/named/intercept.zone";
