Filter IPv6 addresses even with DNSSEC

--- a/etc/named.conf
+++ b/etc/named.conf
@@ -2,7 +2,7 @@ options {
         listen-on { any; };
         directory       "/var/named";
 		
-		filter-aaaa-on-v4 yes;
+		filter-aaaa-on-v4 break-dnssec;
         allow-query { any; };
         recursion yes;
 
