--- a/etc/named.conf
+++ b/etc/named.conf
@@ -5,7 +5,8 @@ options {
 		filter-aaaa-on-v4 break-dnssec;
         allow-query { any; };
         recursion yes;
-
+		forward only;
+		
         forwarders {
                 10.112.4.11;
                 10.112.8.11;
