--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.7 #####
+##### Nginx Caching Reverse Proxy v2.8 #####
 
 user nginx;
 worker_processes auto;
@@ -16,7 +16,11 @@ stream {
         # Set resolvers against DNS servers not used for local interception
         resolver 10.112.4.11 10.112.4.12 ipv6=off;
 
-        # Pass through SSL connections upstream
+        # Log format for stream
+        log_format  stream      'HTTPS [$time_local] $remote_addr $protocol $ssl_preread_server_name:$server_port $status';
+        access_log  /var/log/nginx/access.log stream;
+
+        # Pass through SSL connections upstream using SNI preread
         server {
                 listen 443;
                 proxy_buffer_size 16k;
@@ -29,17 +33,12 @@ http {
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
 
-        # Extended logging for Nginx Amplify
-        log_format  main_ext    '$remote_addr - $remote_user [$time_local] "$request" '
-                                '$status $body_bytes_sent "$http_referer" '
-                                '"$http_user_agent" "$http_x_forwarded_for" '
-                                '"$host" sn="$server_name" '
-                                'rt=$request_time '
-                                'ua="$upstream_addr" us="$upstream_status" '
-                                'ut="$upstream_response_time" ul="$upstream_response_length" '
-                                'cs=$upstream_cache_status' ;
+        # Logging format
+        log_format  main        'HTTP [$time_local] $remote_addr $request_method $host$request_uri $status '
+                                '"$http_user_agent" "$upstream_cache_status"';
+                               
 
-        access_log /var/log/nginx/access.log main_ext;
+        access_log /var/log/nginx/access.log main;
 
         # Set resolvers against DNS servers not used for local interception
         resolver 10.112.4.11 10.112.4.12 ipv6=off;
@@ -162,17 +161,6 @@ http {
                         proxy_set_header Upgrade-Insecure-Requests "";
                         proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
                         proxy_hide_header ETag;
-                }
-        }
-
-        server {
-                # Add stub status for Nginx Amplify
-                listen 127.0.0.1:80;
-                server_name 127.0.0.1;
-                location /nginx_status {
-                        stub_status on;
-                        allow 127.0.0.1;
-                        deny all;
                 }
         }
 }
