--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.8 #####
+##### Nginx Caching Reverse Proxy v2.9 #####
 
 user nginx;
 worker_processes auto;
@@ -13,8 +13,8 @@ events {
 }
 
 stream {
-        # Set resolvers against DNS servers not used for local interception
-        resolver 10.112.4.11 10.112.4.12 ipv6=off;
+        # Set resolvers against DNS servers not used for local interception. You may wish to change these to your ISP's DNS servers.
+        resolver 8.8.8.8 8.8.4.4 ipv6=off;
 
         # Log format for stream
         log_format  stream      'HTTPS [$time_local] $remote_addr $protocol $ssl_preread_server_name:$server_port $status';
@@ -40,8 +40,8 @@ http {
 
         access_log /var/log/nginx/access.log main;
 
-        # Set resolvers against DNS servers not used for local interception
-        resolver 10.112.4.11 10.112.4.12 ipv6=off;
+        # Set resolvers against DNS servers not used for local interception. You may wish to change these to your ISP's DNS servers.
+        resolver 8.8.8.8 8.8.4.4 ipv6=off;
 
         # Global cache paths and variables
         proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=cache:10m max_size=80g inactive=14d use_temp_path=off;
