--- a/etc/named.conf
+++ b/etc/named.conf
@@ -82,3 +82,23 @@ zone "agsupdate.adobe.com." IN {
         type master;
         file "/etc/named/intercept.zone";
 };
+
+zone "download.epicgames.com." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
+
+zone "resources.download.minecraft.net." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
+
+zone "steampipe.akamaized.net." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
+
+zone "steamcontent.com." IN {
+        type master;
+        file "/etc/named/intercept.zone";
+};
