--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx Caching Reverse Proxy v2.9 #####
+##### Nginx MicroCDN Cache v3.0 #####
 
 user nginx;
 worker_processes auto;
@@ -83,7 +83,8 @@ http {
 
                 server_name     tlu.dl.delivery.mp.microsoft.com *.tlu.dl.delivery.mp.microsoft.com
                                 download.windowsupdate.com *.download.windowsupdate.com
-                                *.gvt1.com;
+                                *.gvt1.com
+								*.steamcontent.com;
 
                 ignore_invalid_headers off;
 
@@ -127,7 +128,8 @@ http {
                 server_name     appldnld.apple.com iosapps.itunes.apple.com osxapps.itunes.apple.com updates-http.cdn-apple.com swcdn.apple.com
                                 officecdn.microsoft.com.edgesuite.net
                                 dl.google.com
-                                ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com;
+                                ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com
+								download.epicgames.com resources.download.minecraft.net steampipe.akamaized.net;
 
                 ignore_invalid_headers off;
 
