--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx MicroCDN Cache v3.0 #####
+##### Nginx MicroCDN Cache v3.1 #####
 
 user nginx;
 worker_processes auto;
@@ -59,7 +59,10 @@ http {
                 # Don't cache these zones
                 listen 80 default_server;
 
-                server_name     redirector.gvt1.com;
+                                # Don't cache Google redirectors
+                server_name     redirector.gvt1.com
+                                # Don't cache WSUS downloads. What's the point?
+                                wsus.ds.download.windowsupdate.com;
 
                 location / {
                         proxy_http_version 1.1;
@@ -84,7 +87,7 @@ http {
                 server_name     tlu.dl.delivery.mp.microsoft.com *.tlu.dl.delivery.mp.microsoft.com
                                 download.windowsupdate.com *.download.windowsupdate.com
                                 *.gvt1.com
-								*.steamcontent.com;
+                                *.steamcontent.com;
 
                 ignore_invalid_headers off;
 
@@ -129,7 +132,7 @@ http {
                                 officecdn.microsoft.com.edgesuite.net
                                 dl.google.com
                                 ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com
-								download.epicgames.com resources.download.minecraft.net steampipe.akamaized.net;
+                                download.epicgames.com resources.download.minecraft.net steampipe.akamaized.net;
 
                 ignore_invalid_headers off;
 
