--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx MicroCDN Cache v3.1 #####
+##### Nginx MicroCDN Cache v3.2 #####
 
 user nginx;
 worker_processes auto;
@@ -86,8 +86,7 @@ http {
 
                 server_name     tlu.dl.delivery.mp.microsoft.com *.tlu.dl.delivery.mp.microsoft.com
                                 download.windowsupdate.com *.download.windowsupdate.com
-                                *.gvt1.com
-                                *.steamcontent.com;
+                                *.gvt1.com;
 
                 ignore_invalid_headers off;
 
@@ -131,8 +130,7 @@ http {
                 server_name     appldnld.apple.com iosapps.itunes.apple.com osxapps.itunes.apple.com updates-http.cdn-apple.com swcdn.apple.com
                                 officecdn.microsoft.com.edgesuite.net
                                 dl.google.com
-                                ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com
-                                download.epicgames.com resources.download.minecraft.net steampipe.akamaized.net;
+                                ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com;
 
                 ignore_invalid_headers off;
 
