--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx MicroCDN Cache v3.2 #####
+##### Nginx MicroCDN Cache v3.3 #####
 
 user nginx;
 worker_processes auto;
@@ -52,7 +52,7 @@ http {
         keepalive_timeout 60;
         keepalive_requests 512;
         client_max_body_size 20G;
-        client_body_buffer_size 16M;
+        client_body_buffer_size 1M;
         server_names_hash_max_size 1024;
 
         server {
@@ -96,15 +96,15 @@ http {
                 #Only cache GET request methods
                 proxy_cache_methods GET;
 
-                # Slice downloads into 16MB pieces
-                slice 16M;
+                # Slice downloads into 1MB pieces
+                slice 1M;
 
-                # Lock cache objects until the 16MB piece is retrieved
+                # Lock cache objects until the 1MB piece is retrieved
                 proxy_cache_lock on;
 
-                # Wait 600 seconds before sending file to client
-                proxy_cache_lock_timeout 600s;
-                proxy_cache_lock_age 600s;
+                # Wait 30 seconds before sending any data to client
+                proxy_cache_lock_timeout 30s;
+                proxy_cache_lock_age 30s;
 
                 # Aggressive caching
                 proxy_cache_key "$request_method|$uri|$slice_range";
@@ -140,15 +140,15 @@ http {
                 #Only cache GET request methods
                 proxy_cache_methods GET;
 
-                # Slice downloads into 16MB pieces
-                slice 16M;
+                # Slice downloads into 1MB pieces
+                slice 1M;
 
-                # Lock cache objects until the 16MB piece is retrieved
+                # Lock cache objects until the 1MB piece is retrieved
                 proxy_cache_lock on;
 
-                # Wait 600 seconds before sending file to client
-                proxy_cache_lock_timeout 600s;
-                proxy_cache_lock_age 600s;
+                # Wait 30 seconds before sending any data to client
+                proxy_cache_lock_timeout 30s;
+                proxy_cache_lock_age 30s;
 
                 # Standard caching  
                 proxy_cache_key "$request_method|$host$uri|$slice_range";
