--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx MicroCDN Cache v3.3 #####
+##### Nginx MicroCDN Cache v3.4 #####
 
 user nginx;
 worker_processes auto;
@@ -55,6 +55,14 @@ http {
         client_body_buffer_size 1M;
         server_names_hash_max_size 1024;
 
+        # User agent mappings to no cache rules
+        map $http_user_agent $no_cache {
+                # Don't cache downloads by Apple caching servers
+                ~(swupd_syncd) 1;
+                # Set default to cache
+                default 0;
+        }
+
         server {
                 # Don't cache these zones
                 listen 80 default_server;
@@ -92,6 +100,9 @@ http {
 
                 proxy_cache cache;
                 proxy_cache_valid 200 206 30d;
+
+                # Check if caching should be ignored against user-agent cache map
+                proxy_no_cache $no_cache;
 
                 #Only cache GET request methods
                 proxy_cache_methods GET;
@@ -137,7 +148,10 @@ http {
                 proxy_cache cache;
                 proxy_cache_valid 200 206 30d;
 
-                #Only cache GET request methods
+                # Check if caching should be ignored against user-agent cache map
+                proxy_no_cache $no_cache;
+
+                # Only cache GET request methods
                 proxy_cache_methods GET;
 
                 # Slice downloads into 1MB pieces
