--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx MicroCDN Cache v3.4 #####
+##### Nginx MicroCDN Cache v3.5 #####
 
 user nginx;
 worker_processes auto;
@@ -14,11 +14,14 @@ events {
 
 stream {
         # Set resolvers against DNS servers not used for local interception. You may wish to change these to your ISP's DNS servers.
-        resolver 8.8.8.8 8.8.4.4 ipv6=off;
+        resolver 10.112.8.11 10.112.4.11 ipv6=off;
 
         # Log format for stream
         log_format  stream      'HTTPS [$time_local] $remote_addr $protocol $ssl_preread_server_name:$server_port $status';
         access_log  /var/log/nginx/access.log stream;
+
+        # Limit connections to one server as defined in limit_conn section below
+        limit_conn_zone $binary_remote_addr zone=ip_addr:10m;
 
         # Pass through SSL connections upstream using SNI preread
         server {
@@ -26,6 +29,11 @@ stream {
                 proxy_buffer_size 16k;
                 ssl_preread on;
                 proxy_pass "${ssl_preread_server_name}:443";
+
+                # Set below bandwidth limitation for all HTTPS transfers. Eg. 1m = 10mbps
+                limit_conn ip_addr 1;
+                proxy_download_rate 1m;
+                proxy_upload_rate 1m;
         }
 }
 
