--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -20,18 +20,14 @@ stream {
         log_format  stream      'HTTPS [$time_local] $remote_addr $protocol $ssl_preread_server_name:$server_port $status';
         access_log  /var/log/nginx/access.log stream;
 
-        # Limit connections to one server as defined in limit_conn section below
-        limit_conn_zone $binary_remote_addr zone=ip_addr:10m;
-
-        # Pass through SSL connections upstream using SNI preread
         server {
+                # Pass through SSL connections upstream using SNI preread
                 listen 443;
                 proxy_buffer_size 16k;
                 ssl_preread on;
                 proxy_pass "${ssl_preread_server_name}:443";
 
-                # Set below bandwidth limitation for all HTTPS transfers. Eg. 1m = 10mbps
-                limit_conn ip_addr 1;
+                # Restrict each client to a set bandwidth - Eg. 1m = 10mbps
                 proxy_download_rate 1m;
                 proxy_upload_rate 1m;
         }
