Increase slice size to 16MB to prevent cache corruption

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx MicroCDN Cache v3.5 #####
+##### Nginx MicroCDN Cache v3.6 #####
 
 user nginx;
 worker_processes auto;
@@ -56,7 +56,7 @@ http {
         keepalive_timeout 60;
         keepalive_requests 512;
         client_max_body_size 20G;
-        client_body_buffer_size 1M;
+        client_body_buffer_size 16M;
         server_names_hash_max_size 1024;
 
         # User agent mappings to no cache rules
@@ -111,15 +111,15 @@ http {
                 #Only cache GET request methods
                 proxy_cache_methods GET;
 
-                # Slice downloads into 1MB pieces
-                slice 1M;
+                # Slice downloads into 16MB pieces
+                slice 16M;
 
-                # Lock cache objects until the 1MB piece is retrieved
+                # Lock cache objects until the 16MB piece is retrieved
                 proxy_cache_lock on;
 
-                # Wait 30 seconds before sending any data to client
-                proxy_cache_lock_timeout 30s;
-                proxy_cache_lock_age 30s;
+                # Wait 600 seconds for 16MB piece to arrive
+                proxy_cache_lock_timeout 600s;
+                proxy_cache_lock_age 600s;
 
                 # Aggressive caching
                 proxy_cache_key "$request_method|$uri|$slice_range";
@@ -158,15 +158,15 @@ http {
                 # Only cache GET request methods
                 proxy_cache_methods GET;
 
-                # Slice downloads into 1MB pieces
-                slice 1M;
+                # Slice downloads into 16MB pieces
+                slice 16M;
 
-                # Lock cache objects until the 1MB piece is retrieved
+                # Lock cache objects until the 16MB piece is retrieved
                 proxy_cache_lock on;
 
-                # Wait 30 seconds before sending any data to client
-                proxy_cache_lock_timeout 30s;
-                proxy_cache_lock_age 30s;
+                # Wait 600 seconds for 16MB piece to arrive
+                proxy_cache_lock_timeout 600s;
+                proxy_cache_lock_age 600s;
 
                 # Standard caching  
                 proxy_cache_key "$request_method|$host$uri|$slice_range";
