Drop support for Apple Products
Apple have yet again changed the way they do updates, uncluding extra validations and checks. Dropping support for Apple products. My advice is, just dont use apple products...

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-##### Nginx MicroCDN Cache v4.0 #####
+##### Nginx MicroCDN Cache v4.1 #####
 
 user nginx;
 worker_processes auto;
@@ -28,8 +28,8 @@ stream {
                 proxy_pass "${ssl_preread_server_name}:443";
 
                 # Restrict each client to a set bandwidth - Eg. 1m = 10mbps
-                proxy_download_rate 1m;
-                proxy_upload_rate 1m;
+                # proxy_download_rate 1m;
+                # proxy_upload_rate 1m;
         }
 }
 
@@ -142,8 +142,7 @@ http {
                 # Default caching
                 listen 80;
 
-                server_name     appldnld.apple.com updates-http.cdn-apple.com swcdn.apple.com
-                                officecdn.microsoft.com.edgesuite.net
+                server_name     officecdn.microsoft.com.edgesuite.net
                                 dl.google.com
                                 ardownload.adobe.com ccmdl.adobe.com agsupdate.adobe.com;
 
